testsuite/escript/classes/duplicate-defined-function.err
duplicate-defined-function.src:3:1: error: Class 'Animal' conflicts with User Function of the same name.