testsuite/escript/classes/duplicate-defined-function.src
function Animal() endfunction

class Animal()
  function Animal( this, name )
    this.name := name;
  endfunction
endclass
